smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/map-unclosed-parameters4.smithy
// Parse error at line 3, column 61 near `smithy.api#String`: Unexpected EOF
namespace com.foo
map MyMap { key: smithy.api#String, value: smithy.api#String
